--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,18 +1,21 @@
 {
     "branches": ["main"],
     "tagFormat": "v${version}",
-    "plugins": [
-      ["@semantic-release/commit-analyzer", { "preset": "conventionalcommits" }],
-      ["@semantic-release/release-notes-generator", { "preset": "conventionalcommits" }],
-      ["@semantic-release/exec", {
-        "prepareCmd": "RELEASE_VERSION=${nextRelease.version} node tools/write_version.js"
-      }],
-      ["@semantic-release/changelog", { "changelogFile": "CHANGELOG.md" }],
-      ["@semantic-release/git", {
-        "assets": ["CHANGELOG.md", "VERSION"],
-        "message": "chore(release): ${nextRelease.version}\n\n${nextRelease.notes}"
-      }],
-      ["@semantic-release/github", { "successComment": false, "failComment": false }]
-    ]
-  }
+    "plugins": 
+      [
+        "@semantic-release/commit-analyzer",
+        ["@semantic-release/release-notes-generator", {
+          "preset": "conventionalcommits",
+          "writerOpts": {
+            "transform": "(commit, context) => { if (!commit.committerDate) { commit.committerDate = new Date().toISOString(); } return commit; }"
+          }
+        }],
+        "@semantic-release/changelog",
+        ["@semantic-release/git", {
+          "assets": ["CHANGELOG.md", "VERSION"],
+          "message": "chore(release): ${nextRelease.version}\n\n${nextRelease.notes}"
+        }],
+        "@semantic-release/github"
+      ]
+    }
   
