--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,21 +1,13 @@
 {
-    "branches": ["main"],
-    "tagFormat": "v${version}",
-    "plugins": 
-      [
-        "@semantic-release/commit-analyzer",
-        ["@semantic-release/release-notes-generator", {
-          "preset": "conventionalcommits",
-          "writerOpts": {
-            "transform": "(commit, context) => { if (!commit.committerDate) { commit.committerDate = new Date().toISOString(); } return commit; }"
-          }
-        }],
-        "@semantic-release/changelog",
-        ["@semantic-release/git", {
-          "assets": ["CHANGELOG.md", "VERSION"],
-          "message": "chore(release): ${nextRelease.version}\n\n${nextRelease.notes}"
-        }],
-        "@semantic-release/github"
-      ]
-    }
-  
+  "branches": ["main"],
+  "tagFormat": "v${version}",
+  "plugins": [
+    ["@semantic-release/commit-analyzer", { "preset": "conventionalcommits" }],
+    ["@semantic-release/release-notes-generator", { "preset": "conventionalcommits" }],
+    ["@semantic-release/changelog", { "changelogFile": "CHANGELOG.md" }],
+    ["@semantic-release/exec", {
+      "prepareCmd": "bash -lc 'echo ${nextRelease.version} > VERSION; git config user.name \"github-actions[bot]\"; git config user.email \"41898282+github-actions[bot]@users.noreply.github.com\"; git add CHANGELOG.md VERSION; git commit -m \"chore(release): ${nextRelease.version}\n\n${nextRelease.notes}\" || true'"
+    }],
+    ["@semantic-release/github", { "successComment": false, "failComment": false }]
+  ]
+}
