--- a/.github/workflows/realease.yml
+++ b/.github/workflows/realease.yml
@@ -22,11 +22,13 @@ jobs:
         with:
           node-version: "20"
           cache: "npm"
+          fetch-depth: 0
 
       - name: Clean install
         run: |
           rm -rf node_modules
           npm ci
+          git fetch --prune --tags --force
 
       - name: semantic-release
         env:
