--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
-Flask==3.0.3
-Flask_SQLAlchemy==3.1.1
-Flask_WTF==1.2.2
-WTForms==3.1.2
-email_validator==2.2.0
-python-dotenv==1.0.1
-feedparser==6.0.11
-requests==2.32.3
-bleach==6.1.0
-stripe>=10,<13
-beautifulsoup4==4.12.3
-lxml==5.3.0
+Flask>=3.0,<4
+Flask-WTF>=1.2,<2
+WTForms>=3.1,<4
+Flask-SQLAlchemy>=3.1,<4
+SQLAlchemy>=2.0,<3
+
+stripe>=10,<11
+bleach>=6.1,<7
+requests>=2.31,<3
+feedparser>=6.0,<7
+python-dotenv>=1.0,<2
+python-dateutil>=2.8,<3
+
+gunicorn>=21,<22
+
+python-dateutil>=2.8,<3
