--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,8 @@ python-dateutil>=2.8,<3
 
 gunicorn>=21,<22
 
-python-dateutil>=2.8,<3
-
 beautifulsoup4>=4.12
 lxml
+
+sqlalchemy-cockroachdb>=2.0
+psycopg[binary]>=3.1
